UseCGroupMemoryLimitForHeap->UseContainerSupport when needed.
removed UseConcMarkSweepGC java opetion since it was removed in java 17

zookeeper dockerfile fix
hbase updated 1.2.4->2.5.6